Bug 1049243 - Integrate MTP and Device Storage. r=echou